[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
maelstrom-node = "0.1.6"
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = ["v4"] }

[[bin]]
name = "echo"

[[bin]]
name = "unique_ids"
