[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures = "0.3.28"
log = "0.4.20"
maelstrom-node = "0.1.6"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["sync"] }
tokio-context = "0.1.3"
uuid = { version = "1.5.0", features = ["v4"] }
